--- a/index.htm
+++ b/index.htm
@@ -1,5 +1,26 @@
 <html>
+
+<head>
+  <title> mundane scribbles like a schizo </title>
+</head>
+
+
 <body>
-rreeeeeeeeeeeeeeeeeeeeeeeeeeeeee
+  <div id = "HeaderBar"> Supercalifragilisticespialidocious </div>
+  <div id = "Comic">
+    
+    <ul class="ComicNav">
+      <li><a href="xyz.jpg">Home</a></li>
+    </ul>
+    <div id="ChapterTitle">Chapter 1: The mysterious standin image (this one's by walfie)</div>
+
+    <div id="comic">
+      <img src="ame no.gif" title="hello?is this thing working" width = 200 style="padding-left: 200;"><img src="ame no.gif" title="hello?is this thing working" width = 200><img src="ame no.gif" title="hello?is this thing working" width = 200><img src="ame no.gif" title="hello?is this thing working" width = 200><img src="ame no.gif" title="hello?is this thing working" width = 200>
+      <br><br>
+
+      <canvas id="comicpage" width = "924" height = 284 style="border:1px solid #000000; margin-left: 220; padding-left: 30;></canvas>
+    </div>
+  </div>
+  <!--div id= "FooterBar"></div--> 
 </body>
 </html>
